--- a/reactgm/package.json
+++ b/reactgm/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.5.7",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-google-maps": "^9.4.5",
     "react-scripts": "2.1.1"
   },
   "scripts": {
