--- a/reactgm/package.json
+++ b/reactgm/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "core-js": "^2.5.7",
+    "google-maps-react": "^2.0.2",
+    "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
