--- a/Car2Car/Car2Car/Web.config
+++ b/Car2Car/Car2Car/Web.config
@@ -5,12 +5,12 @@
   -->
 <configuration>
   <appSettings>
-    <add key="visaUrl" value="https://sandbox.api.visa.com/" />
-    <add key="cert" value="sabio_car2ca_12313" />
-    <add key="password" value="zw071ceqAL6r8iZKyAhO0Z" />
-    <add key="certPassword" value="sabio_car2ca_12313" />
-    <add key="userId" value="YE14MN9TJ0GBNRP8Y4H0213FcpUy0zwXH_nBOy17tIPnr_0Zo" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="visaUrl" value="https://sandbox.api.visa.com/"/>
+    <add key="cert" value="~/cert.p12"/>
+    <add key="certPassword" value="pass"/>
+    <add key="password" value="GJdSn9R"/>
+    <add key="userId" value="7V3NGR2KRPZHY13GLWX021EMbn9QMrml9iYDs4Hfbz9HtEsJg"/>
+    <add key="ClientSettingsProvider.ServiceUri" value=""/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
